# LearnOpenGL

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  main
.cache/clangd/index/: glad.c.3EDA881EF270F7E5.idx  glad.h.7FF8D4797EB41DB3.idx  khrplatform.h.361E61394E4FC1D9.idx  main.c.3BFAE76B8448FF7B.idx  shader.c.FB46142CDEBAA577.idx  shader.h.D4658C264DB6BC48.idx  shader.h.DFC3348462EEB7E3.idx
glad/include/glad/: glad.h
glad/src/: glad.c
include/: shader.h
src/: main.c  shader.c  triangleVertex.glsl
src/shaders/: triangleVertex.glsl
